adding default swagger query params
